[package]
name = "aws-toolkit"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
aws-config = { version = "1.5.15", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = { version = "1.64.0", features = ["behavior-version-latest"] }
aws-sdk-codecommit = { version = "1.57.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.64.0", features = ["behavior-version-latest"] }
aws-sdk-elasticache = { version = "1.61.0", features = ["behavior-version-latest"] }
aws-sdk-elasticloadbalancingv2 = { version = "1.64.0", features = ["behavior-version-latest"] }
aws-sdk-rds = { version = "1.75.0", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = { version = "1.63.0", features = ["behavior-version-latest"] }
clap = { version = "4.5.27", features = ["derive"] }
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
git2 = "0.20.0"
aws-sdk-codepipeline = { version = "1.65.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.62.0", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.106.0", features = ["behavior-version-latest"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[[bin]]
name = "ssm-session"
path = "src/ssm-session.rs"

[[bin]]
name = "scale-in-ecs"
path = "src/scale-in-ecs.rs"

[[bin]]
name = "ecr-gitconfig"
path = "src/ecr-gitconfig.rs"

[[bin]]
name = "ses-suppression-list"
path = "src/ses-suppression-list.rs"

[[bin]]
name = "release-codepipelines"
path = "src/release-codepipelines.rs"
