[package]
name = "aws-toolkit"
version = "0.2.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.5.29", features = ["derive"] }
chrono = "0.4.39"
env_logger = "0.11.6"
log = "0.4.25"
async-recursion = "1.1.1"
git2 = "0.20.0"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = { version = "1.113.0", features = ["behavior-version-latest"] }
aws-sdk-codecommit = { version = "1.98.0", features = ["behavior-version-latest"] }
aws-sdk-ecs = { version = "1.122.0", features = ["behavior-version-latest"] }
aws-sdk-elasticache = { version = "1.104.0", features = ["behavior-version-latest"] }
aws-sdk-elasticloadbalancingv2 = { version = "1.110.0", features = ["behavior-version-latest"] }
aws-sdk-rds = { version = "1.130.0", features = ["behavior-version-latest"] }
aws-sdk-sesv2 = { version = "1.117.0", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.110.0", features = ["behavior-version-latest"] }
aws-sdk-ec2 = { version = "1.221.0", features = ["behavior-version-latest"] }
aws-sdk-codepipeline = { version = "1.107.0", features = ["behavior-version-latest"] }
aws-sdk-guardduty = { version = "1.120.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", features = ["behavior-version-latest"] }
percent-encoding = "2.3.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[[bin]]
name = "ssm-session"
path = "src/ssm-session.rs"

[[bin]]
name = "scale-in-ecs"
path = "src/scale-in-ecs.rs"

[[bin]]
name = "ecr-gitconfig"
path = "src/ecr-gitconfig.rs"

[[bin]]
name = "ses-suppression-list"
path = "src/ses-suppression-list.rs"

[[bin]]
name = "s3-guardduty-copy"
path = "src/s3-guardduty-copy.rs"

[[bin]]
name = "release-codepipelines"
path = "src/release-codepipelines.rs"
